# fairuz

./: .clang-format  .gitignore  .gitmodules  .notes.txt.swp  CMakeLists.txt  LICENSE  OPTIMIZATION_MODULES.md  README.md  analysis.md  aug.fa  build.sh  count.fa  count.txt  demo.fa  demo.sh  demo.txt  demo_else.txt  file.fa  format.sh  format.zsh  gen_test_cases.py  lines  lines.cpp  main.cpp  notes.txt  simple.txt  some.cpp  test.sh  test.zsh
build-codex/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-llvm/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
editors/vscode/fairuz/: README.md  extension.js  fairuz-language-0.1.0.vsix  language-configuration.json  package.json
examples/: ar  arabic.c  arabic_test.c  count.fa  demo.fa  fibonacci.fa  gol.fa  gol_clean.fa  hello.fa  safe_while_index_100.fa  sum_list.fa
fairuz/: arena.cc  arena.hpp  array.hpp  ast.cc  ast.hpp  ast_printer.hpp  compiler.cc  compiler.hpp  ctype.hpp  diagnostic.cc  diagnostic.hpp  error.hpp  fobject.cc  fobject.hpp  formatter.cc  formatter.hpp  gc.cc  gc.hpp  lexer.cc  lexer.hpp  loop_header.cc  loop_header.hpp  macros.hpp  meta.hpp  opcode.cc  opcode.hpp  optim.cc  optim.hpp  pair.hpp  parser.cc  parser.hpp  ssa_loop.cc  ssa_loop.hpp  stats.cc  stats.hpp  stdlib.cc  string.cc  string.hpp  string.tpp  table.hpp  (+6 more)
include/: allocator.hpp  arena.hpp  array.hpp  ast.hpp  ast_printer.hpp  compiler.hpp  ctype.hpp  diagnostic.hpp  error.hpp  error_or.hpp  formatter.hpp  gc.hpp  lexer.hpp  macros.h  macros.hpp  meta.hpp  opcode.hpp  optim.hpp  pair.hpp  parser.hpp  stats.hpp  stdlib.hpp  string.hpp  table.hpp  token.hpp  types.hpp  util.hpp  value.hpp  vm.hpp
include/IR/: codegen.hpp  env.hpp  value.hpp
include/ast/: AST_allocator.hpp  ast.hpp  ast_node.hpp  expr.hpp  printer.hpp  stmt.hpp
include/diag/: diagnostic.hpp  diagnostic_codes.h  diagnostic_codes.hpp  diagnostic_emitter.h  diagnostic_emitter.hpp  diagnostic_engine.h  diagnostic_engine.hpp  diagnostic_label.hpp
include/input/: error.hpp  file_manager.hpp  file_manager_.hpp  source_manager.hpp
include/input/buffer/: base.hpp  input_buffer.hpp
include/lex/: arabic.h  buffer.h  file_manager.hpp  indent.hpp  lexer.h  lexer.hpp  source_manager.h  source_manager.hpp  token.h  token.hpp  util.h  util.hpp
include/lex/buffer/: base.h  base.hpp  input_buffer.h  input_buffer.hpp
include/lex/loader/: buffer.h  loader.h
include/lex/sym_table/: entry.h  entry.hpp  table.h  table.hpp
include/object/: object.h
include/parser/: advanced.h  advanced.hpp  analyze.h  analyze.hpp  analyzer.hpp  ast.h  ast.hpp  cfg.hpp  codegen.hpp  incremental.hpp  language_server.hpp  optim.h  optim.hpp  parallel.hpp  parser.h  parser.hpp  parser_.h  parser_.hpp  profiler.hpp  symbol_table.hpp  test.txt  type_system.hpp  uc.h  uc.hpp  util.hpp  vm.h
include/parser/ast/: AST_allocator.hpp  ast.hpp  ast_.hpp  ast_node.hpp  expr.hpp  printer.hpp  stmt.hpp
include/runtime/: compiler.hpp  opcode.hpp  optim.hpp  runtime_allocator.hpp  stdlib.hpp  value.hpp  value_.hpp  vm.hpp
include/runtime/allocator/: arena.h  arena.hpp  arena_.hpp  arena_2.h  arena_block.hpp  demo  demo.c  fast_arena_block.hpp  fast_free_list.hpp  free_list.hpp  gtest_arena.cpp  meta.hpp  stats.hpp  test_arena.cpp
include/runtime/compiler/: compiler.hpp  (+3 more)
include/types/: string.hpp  string_allocator.hpp  string_data.hpp
mylang_demos/: demo.fa  demo_.fa  demo_factorial.fa  demo_lists_working.fa  demo_native_regressions.fa  demo_numeric_natives.fa  demo_primes_200.fa  demo_strings_lists.fa
packaging/homebrew/: fairuz.rb  mylang.rb
probes/: probe_arabic_text.fa  probe_bool_and_none.fa  probe_matrix_walk.fa  probe_recursive_report.fa  probe_word_tally.fa
src/: arena.cc  array.cc  ast.cc  comp.cc  compiler.cc  diagnostic.cc  formatter.cpp  gc.cc  lexer.cc  opcode.cc  parser.cc  stats.cc  stdlib.cc  string.cc  token.cc  types.cc  vm.cc
src/IR/: codegen.cc  env.cc  value.cc
src/ast/: ast.cc  ast_node.cc
src/diag/: diagnostic.cc  diagnostic_engine.cc
src/input/: file_manager.cc  file_manager_.cc  source_manager.cc
src/lex/: buffer.cc  file_manager.cc  lexer.cc  source_manager.cc  token.cc
src/lexer/: lexer.cc  source_manager.cc  source_manager_.cc  token.cc
src/object/: object.cc
src/parser/: advanced.cc  analyzer.cc  cfg.cc  codegen.cc  incremental.cc  language_server.cc  optim.cc  parallel.cc  parser.cc  parser_.cc  profiler.cc  symbol_table.cc  token.cc  type_system.cc
src/runtime/: compiler.cc  opcode.cc  stdlib.cc  value.cc  vm.cc
src/types/: string.cc  string_data.cc
tests/: test.py  test_analyzer.cpp  test_arena.cpp  test_chunk.cpp  test_class_compile.cpp  test_cli.cpp  test_common.h  test_compiler.cpp  test_compiler_class_bt.cpp  test_compiler_class_integration.cpp  test_config.h  test_include_all.cpp  test_indentation.cpp  test_main.cpp  test_narrow_table.cpp  test_opcode.cpp  test_optim.cpp  test_parser.cpp  test_parser_golden.cpp  test_property.cpp  test_regressions.cpp  test_stdlib.cpp  test_string.cpp  test_tokens.cpp  test_vm.cpp
tests/IR/: test_codegen.cpp  test_full.cpp  test_value.cpp
tests/lexer/: README.md  test_arena.cpp  test_file.cpp  test_indentation.cpp  test_tokens.cpp
tests/parser/: README.md  test_analyzer.cpp  test_optim.cpp  test_parser.cpp
tests/runtime/: test_arena.cpp  test_stdlib.cpp  test_vm.cpp
tests/security/: test_security.cpp
tests/string/: test_string.cpp
tests/test_cases/: augmented_assign_div.fa  augmented_assign_minus.fa  augmented_assign_mod.fa  augmented_assign_plus.fa  augmented_assign_times.fa  boolean_literal_false.fa  break_stmt.fa  chained_assignment.txt  chained_assignment_with_expression.txt  chained_comparison.txt  complex_function_call.txt  complexe_if_statement.fa  deeply_nested.txt  for_loop.txt  identifier.txt  invalid_operator_seq.txt  large_file.fa  long_identifier.txt  missing_operand.txt  nested_parens.fa  simple_division.txt  simple_subtraction.txt  test_file.txt  unary_chain.txt  unexpected_eof.fa
utfcpp/source/: utf8.h
(+144 files in other folders)
